tests/miniJava/neg/006717_mutation.MiniJava
class java { public static void int [] Main ( String [ ] java ) { { } } }
